--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,11 +21,16 @@
     "@hapi/boom": "9.1.4",
     "@types/express": "4.17.13",
     "body-parser": "1.19.2",
+    "bcrypt": "^5.0.1",
     "cors": "2.8.5",
     "dotenv": "16.0.0",
     "express": "4.17.3",
+    "express-async-errors": "^3.1.1",
     "express-rescue": "1.1.31",
+    "joi": "^17.6.0",
     "jsonwebtoken": "8.5.1",
+    "morgan": "^1.10.0",
+    "helmet": "^5.1.0",
     "md5": "2.3.0",
     "multer": "1.4.4",
     "mysql2": "2.3.3",
