--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,7 +23,10 @@
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
     "react": "17.0.2",
+    "bootstrap": "^4.5.3",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.0",
     "serve": "13.0.2",
     "web-vitals": "2.1.4"
