--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,8 +22,8 @@
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
-    "react": "17.0.2",
     "bootstrap": "^4.5.3",
+    "react": "17.0.2",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.2",
     "react-router-dom": "^5.1.2",
@@ -32,11 +32,14 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint-config-trybe-frontend": "1.3.0",
+    "postcss": "^8.4.16",
     "stylelint": "14.6.0",
     "stylelint-config-standard": "25.0.0",
-    "stylelint-order": "5.0.0"
-  }, 
+    "stylelint-order": "5.0.0",
+    "tailwindcss": "^3.1.8"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
